public/css/stylesheet.css
.project{
    display: none;
}
body{
    margin: 0px;
    padding: 0px;
    overflow-x: hidden;
}
a{
    text-decoration: none;
}
footer{
    margin: 0;
    padding: 0;
    height: 50px;
    overflow: hidden;
    background-color: #40a8c4;
    -webkit-filter: drop-shadow(10px 10px 10px black);
    filter: drop-shadow(10px 10px 10px black);
}

.centered_vertical{
    position: absolute;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}

/*Nav Bar CSS*/
.header_nav{
    width: 100%;
    height: 50px;
    position: fixed;
    z-index: 6;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    background-color: #40a8c4;
    box-sizing: border-box;
}
.logo_div{
    margin: 0 0 0 10px;
}
.logo_name_div{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.rb2k_logo{
    height: 33px;
    width: 33px;
}
.rb2k_logo_small{
    height: 30px;
    width: 30px;
    display: none;
}
#logo_lines{
    margin: 0 0 0 auto;
}
.name_header{
    margin: 0 0 0 10px;
    padding: 0px;
    font-family: 'Exo 2', sans-serif;
    font-size: 18px;
    font-weight: 500;
    letter-spacing: 5px;
    color: #f4ebc1;
    text-transform: uppercase;
    font-weight: normal;
    text-decoration: none;
}
.nav_links_container{
    margin: 0 10px 0 0;
    width: 35%;
    display: flex;
    flex-direction: row-reverse;
    align-items: center;
    box-sizing: border-box;
}
.nav_links_block{
    margin: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.link_lines{
    opacity: 0;
    width: 0%; 
    margin: 5px 0 5px auto;
    border: solid 1px white;
    transition: all 0.5s ease;
}
.hovered_lines{
    opacity: 1;
    width: 85%;
}
.header_nav_links{
    margin: 0 0 0 30px;
    color: #f4ebc1;
    display: flex;
    align-items: center;
    transition: all 0.3s ease;
    font-family: 'Montserrat', sans-serif;
    font-size: 18px;
    letter-spacing: 3px;
}
.logo_nav_link{
    margin: 0 0 0 0;
}
.hovered_nav_item{
    color: white;
}
.burger{
    display: none;
    flex-direction: column;
    cursor: pointer;
}
.burger div{
    width: 25px;
    height: 3px;
    margin: 3px;
    background-color: #f4ebc1;
}
.mobile_nav{
    position: fixed;
    width: 100%;
    height: 100%;
    bottom: 0vh;
    right: 0px;
    background-color: #40a8c4;
    z-index: 5;
    display: flex;
    flex-direction: column;
    transform: translateX(100%);
    transition: 1s all ease-in-out;
}
.mobile_links_container{
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}
.mobile_nav_links{
    color: #f4ebc1;
    transition: all 0.3s ease;
    font-family: 'Montserrat', sans-serif;
    font-size: 1.5em;
}
.nav_active{
    transform: translateX(0%)
}

/*Landing Page CSS*/
.image_panel{
    width: 100%;
    overflow: hidden;
    height: 700px;
    position: relative;
}
.text_panel{
    width: 100%;
    height: 400px;
    overflow: hidden;
    position: relative;
}

/*News*/
.news_panel{
    position: relative;
    text-align: center;
    color: white;
    background-image: url(/images/aurora.jpg);
    background-size: fill;
    background-position: top;
}
.news_container{
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
}
.news_header_div{
    margin: 0;
    padding: 0;
}
.news_header{
    margin: 0;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 34px;
    text-transform: uppercase;
    color: white;
}
.social_link_div{
    margin: 0;
    width: 50%;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
}

.linkedin_icon{
    background-image: url("/images/linkedin_icon.png");
}
.github_icon{
    background-image: url("/images/github_icon.png");
}
.facebook_icon{
    background-image: url("/images/facebook_icon.png");
}
.instagram_icon{
    background-image: url("/images/instagram_icon.png");
}
.twitter_icon{
    background-image: url("/images/twitter_icon.png");
}
.youtube_icon{
    background-image: url("/images/youtube_icon.png");
}
.node_icon{
    width: 26px;
    height: 26px;
    background-size: cover;
    background-image: url("/images/nodejs_icon.png");
}
.handlebars_icon{
    width: 26px;
    height: 26px;
    background-size: cover;
    background-image: url("/images/handlebars_icon.png");
}
.feed_div{
    display: none;
    margin: 0;
    width: 50%;
    height: 200px;
}
.fb-page{
    border: solid 1px white;
}
.news_button_div{
    margin: 0px;
}
.news_button{
    background: none;
    color: #f4ebc1;
    border: solid;
    border-color: white;
    font-size: 24px;
    width: 250px;
    height: 50px;
    transition: all 0.5s ease;
    cursor: pointer;
}


/*What New CSS*/
.news_elements{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    height: 100%;
}
.social_header_div{
    margin-left: auto;
    margin-right: auto;
    opacity: 0;
    transition: all 1.5s ease;
}
.social_grid_container{
    display: grid;
    grid-template-columns: auto auto auto;
}
.social_grid_element{
    display: flex;
    align-items: center;
    opacity: 0;
    transition: all 1.5s ease;
    pointer-events: none;
}
.social_items_div{
    margin-left: 25%;
    display: flex;
    align-items: center;
}
.social_node{
    width: 75px;
    height: 75px;
    opacity: 1;
    margin: 10px;
    -webkit-filter: drop-shadow(10px 10px 10px black);
    filter: drop-shadow(10px 10px 10px black);
    transition: all 1.5s ease;
}
.social_text{
    font-size: 25px;
    font-family: Arial, Helvetica, sans-serif;
    margin: 10px;
    text-align: center;
}
.social_image_link{
    max-width: 75px;
    max-height: 75px;
    border-radius: 5px;
}
.wn_button_div{
    width: 80%;
    margin-left: 10%;
    margin-right: 10%;
}
/* ... */

